--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^1.10.0",
     "@libsql/client": "^0.15.9",
+    "@vercel/blob": "^1.1.1",
     "clsx": "^2.1.1",
     "dotenv-cli": "^8.0.0",
     "drizzle-orm": "^0.44.2",
     "lucide-react": "^0.511.0",
+    "nanoid": "^5.1.5",
     "next": "^15.3.3",
     "next-auth": "^4.24.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "recharts": "^3.0.2",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.25.67"
   },
