--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^1.10.0",
     "@libsql/client": "^0.15.9",
+    "@tanstack/react-query": "^5.83.0",
+    "@tanstack/react-query-devtools": "^5.83.0",
+    "@tanstack/react-virtual": "^3.13.12",
     "@vercel/blob": "^1.1.1",
     "clsx": "^2.1.1",
     "dotenv-cli": "^8.0.0",
@@ -24,8 +27,10 @@
     "next": "^15.3.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-intersection-observer": "^9.16.0",
     "recharts": "^3.0.2",
     "tailwind-merge": "^3.3.0",
+    "uuid": "^11.1.0",
     "zod": "^3.25.67"
   },
   "devDependencies": {
@@ -34,6 +39,7 @@
     "@types/node": "^20.19.2",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
+    "@types/uuid": "^10.0.0",
     "dotenv": "^17.0.0",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9",
